<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Baby\'s First Game</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">Baby\'s First Game</string>
    <string name="menu_findit">Find It!</string>
    <string name="menu_popit">Pop It!</string>
    <string name="menu_baby">Just for Baby</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_volume">Volume</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="inside_voice">Inside voice</string>
    <string name="outside_voice">Outside voice</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_ok">OK</string>
    <string name="dlg_confirm_title">Are you sure?</string>
	<string name="dlg_confirm_exit">Are you sure you want to quit?</string>
	<string name="pref_difficulty">Difficulty</string>
	<string name="pref_difficulty_summary">Difficulty.</string>
	<string name="pref_shapes_title">Shapes</string>
	<string name="pref_shapes_basic">Basic Shapes</string>
	<string name="pref_shapes_basic_summary">Show basic shapes like circles, squares and triangles.</string>
	<string name="pref_shapes_intermediate">Intermediate Shapes</string>
	<string name="pref_shapes_intermediate_summary">Show intermediate shapes like ovals, trapazoids and pentagons.</string>
	<string name="pref_shapes_advanced">Advanced Shapes</string>
	<string name="pref_shapes_advanced_summary">Show advanced shapes like hexagons and octagons.</string>
	<string name="pref_numbers_title">Numbers</string>
	<string name="pref_numbers_basic">Basic Numbers</string>
	<string name="pref_numbers_basic_summary">Show the numbers 1 through 10.</string>
	<string name="pref_numbers_intermediate">Advanced Numbers</string>
	<string name="pref_numbers_intermediate_summary">Introduces the number 0 and numbers 11 through 20.</string>
	<string name="pref_letters_title">Letters</string>
	<string name="pref_letters_basic">A through J</string>
	<string name="pref_letters_basic_summary">Show the beginning letters of the alphabet A through J.</string>
	<string name="pref_letters_intermediate">K through P</string>
	<string name="pref_letters_intermediate_summary">Show letters K through P.</string>
	<string name="pref_letters_advanced">Q through Z</string>
	<string name="pref_letters_advanced_summary">Show letters Q through Z.</string>
	<string name="pref_voice_title">Voice Prompts</string>
	<string name="pref_voice_shapes">Shape Names</string>
	<string name="pref_voice_shapes_summary">Say the names of shapes.</string>
	<string name="pref_voice_numbers">Numbers</string>
	<string name="pref_voice_numbers_summary">Say the numbers.</string>
	<string name="pref_voice_letters">Letters</string>
	<string name="pref_voice_letters_summary">Say the letter names.</string>
	<string name="pref_voice_colors">Colors</string>
	<string name="pref_voice_colors_summary">Say the colors of the letters, numbers and shapes.</string>
	<string name="pref_voice_laughter">Laughter</string>
	<string name="pref_voice_laughter_summary">Include sounds of laughter.</string>
	<string name="pref_audio_title">Audio Settings</string>
	
	<string name="pref_difficulty_key">pref_difficulty</string>
	<string name="pref_shapes_basic_key">pref_shapes_basic</string>
	<string name="pref_shapes_intermediate_key">pref_shapes_intermediate</string>
	<string name="pref_shapes_advanced_key">pref_shapes_advanced</string>
	<string name="pref_numbers_basic_key">pref_numbers_basic</string>
	<string name="pref_numbers_intermediate_key">pref_numbers_intermediate</string>
	<string name="pref_letters_basic_key">pref_letters_basic</string>
	<string name="pref_letters_intermediate_key">pref_letters_intermediate</string>
	<string name="pref_letters_advanced_key">pref_letters_advanced</string>
	<string name="pref_voice_shapes_key">pref_voice_shapes</string>
	<string name="pref_voice_numbers_key">pref_voice_numbers</string>
	<string name="pref_voice_letters_key">pref_voice_letters</string>
	<string name="pref_voice_colors_key">pref_voice_colors</string>
	<string name="pref_voice_laughter_key">pref_voice_laughter</string>
	<string name="pref_gravity_factor_key">pref_gravity_factor</string>

</resources>
